[gd_scene load_steps=9 format=3 uid="uid://cmd3048uf0vk"]

[ext_resource type="Script" path="res://Scripts/Phases/party_phase.gd" id="1_1uxpp"]
[ext_resource type="Script" path="res://Scripts/UI/user_interface.gd" id="1_x6qss"]
[ext_resource type="FontFile" uid="uid://j3g2jwwo7gnj" path="res://Assets(Buildings and foundation)/AlfaSlabOne-Regular.ttf" id="3_i8iym"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64v46"]
bg_color = Color(0.9496, 0.814378, 0.270081, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.227451, 0.227451, 0.227451, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="Theme" id="Theme_m2w77"]
default_font = ExtResource("3_i8iym")
default_font_size = 30
Button/colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
Button/styles/normal = SubResource("StyleBoxFlat_64v46")

[sub_resource type="Animation" id="Animation_vjuyb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 35)]
}

[sub_resource type="Animation" id="Animation_plftx"]
resource_name = "sigma"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(15, 580), Vector2(30, 131)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1lap7"]
_data = {
"RESET": SubResource("Animation_vjuyb"),
"sigma": SubResource("Animation_plftx")
}

[node name="Party Phase" type="Node2D"]
script = ExtResource("1_1uxpp")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -7.0
offset_top = 129.0
offset_right = 1144.0
offset_bottom = 777.0
script = ExtResource("1_x6qss")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_left = 27.0
offset_right = 171.0
offset_bottom = 107.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Property Phase Button" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_m2w77")
text = "Go Back to Property Phase"

[node name="Label" type="Label" parent="UI"]
layout_mode = 2
offset_top = 35.0
offset_right = 387.0
offset_bottom = 110.0
text = "You are currently playing the DEMO!
Purchase the full game to unlock the card feature! 
ಠ_ಠ"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_1lap7")
}

[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Property Phase Button" to="UI" method="_on_property_phase_button_pressed"]
