[gd_scene load_steps=29 format=3 uid="uid://b2rywnh0rro0j"]

[ext_resource type="Script" path="res://Scripts/Phases/property_phase.gd" id="1_vra2o"]
[ext_resource type="Script" path="res://Scripts/globals.gd" id="2_qdl3r"]
[ext_resource type="Script" path="res://Scripts/UI/user_interface.gd" id="3_tg0ud"]
[ext_resource type="PackedScene" uid="uid://cba6o0yxd3yij" path="res://Scenes/building.tscn" id="4_5vo6a"]
[ext_resource type="Texture2D" uid="uid://bvhvkyd2qd8ot" path="res://Assets(Buildings and foundation)/Foundation.png" id="4_vn00e"]
[ext_resource type="Texture2D" uid="uid://cgf3158w1qv5x" path="res://Assets(Buildings and foundation)/Building2.png" id="6_1vrkp"]
[ext_resource type="Texture2D" uid="uid://dou8645saqrct" path="res://Assets(Buildings and foundation)/Warehouse.png" id="6_5ihp5"]
[ext_resource type="Texture2D" uid="uid://dvjfmv36faq1b" path="res://Assets(Buildings and foundation)/Bafe.png" id="7_b10u6"]
[ext_resource type="Texture2D" uid="uid://ddiokywxppj7i" path="res://Assets(Buildings and foundation)/Multiple.png" id="7_y1731"]
[ext_resource type="Texture2D" uid="uid://bvp81ljixtqvl" path="res://Assets(Buildings and foundation)/Building.png" id="8_xhg3w"]
[ext_resource type="Texture2D" uid="uid://cwn1fk5q42enl" path="res://Assets(Buildings and foundation)/RealEstate.png" id="9_3fyb0"]
[ext_resource type="Texture2D" uid="uid://ce2o2s2qayjq6" path="res://Assets(Buildings and foundation)/Commercial.png" id="9_j21lb"]
[ext_resource type="Texture2D" uid="uid://crc8elv03el1o" path="res://Assets(Buildings and foundation)/Tall.png" id="10_ds4b3"]
[ext_resource type="Texture2D" uid="uid://ch81hrjsamw3s" path="res://Assets(Buildings and foundation)/CompanyBuilding.png" id="11_4a1k0"]
[ext_resource type="Texture2D" uid="uid://bbitvxn0boite" path="res://Assets(Buildings and foundation)/Mall.png" id="12_pswn0"]
[ext_resource type="FontFile" uid="uid://j3g2jwwo7gnj" path="res://Assets(Buildings and foundation)/AlfaSlabOne-Regular.ttf" id="16_f0smc"]

[sub_resource type="Gradient" id="Gradient_ojdt7"]
offsets = PackedFloat32Array(0, 0.538961, 0.831169)
colors = PackedColorArray(0.239216, 0.776471, 0.858824, 1, 0.298039, 0.764706, 0.831373, 1, 0.592157, 0.694118, 0.701961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l3py2"]
gradient = SubResource("Gradient_ojdt7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c38w"]
bg_color = Color(0.9496, 0.814378, 0.270081, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.227451, 0.227451, 0.227451, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_4j3m3"]
default_font = ExtResource("16_f0smc")
default_font_size = 27
Button/colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
Button/styles/normal = SubResource("StyleBoxFlat_4c38w")

[sub_resource type="Animation" id="Animation_5np3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Stock Market:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 301)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Stock Market:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.113446]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/View My Stocks:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(53, 404)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/PropertyLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/Profit Phase Button:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UI/Profit Phase Button:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_ql2j3"]
resource_name = "buttons_enter"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Stock Market:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.16667, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-600, 301), Vector2(60, 301), Vector2(30, 301)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Stock Market:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.16667, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.20944, 0.261799, 0.113446]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/View My Stocks:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.36667, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-600, 404), Vector2(70, 404), Vector2(53, 404)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/View My Stocks:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.36667, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.20944, -0.10472, -0.0523599]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/Profit Phase Button:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.36667, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-800, 190), Vector2(64, 190), Vector2(27, 190)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UI/Profit Phase Button:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.56667, 1.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.122173, 0.0523599, -0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sbr2l"]
_data = {
"RESET": SubResource("Animation_5np3g"),
"buttons_enter": SubResource("Animation_ql2j3")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5q58q"]
bg_color = Color(0.615228, 0.912996, 0.561241, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.227451, 0.227451, 0.227451, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_5td2h"]
default_font = ExtResource("16_f0smc")
default_font_size = 30
Button/colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
Button/styles/normal = SubResource("StyleBoxFlat_5q58q")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vi4wk"]
bg_color = Color(0.956496, 0.633422, 0.68425, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.227451, 0.227451, 0.227451, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_sf6sa"]
default_font = ExtResource("16_f0smc")
default_font_size = 20
Button/colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
Button/styles/normal = SubResource("StyleBoxFlat_vi4wk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugmh0"]
bg_color = Color(0.607843, 0.607843, 0.607843, 0.435294)

[node name="Property Phase" type="Node2D"]
script = ExtResource("1_vra2o")

[node name="Player" type="Node" parent="."]
script = ExtResource("2_qdl3r")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 1154.0
offset_bottom = 648.0
texture = SubResource("GradientTexture2D_l3py2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 155.0
offset_bottom = 67.0
scale = Vector2(2.355, 1)
pivot_offset = Vector2(77, 33)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 155.0
offset_bottom = 67.0
scale = Vector2(2.355, 1)
pivot_offset = Vector2(77, 33)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_right = 155.0
offset_bottom = 67.0
scale = Vector2(2.355, 1)
pivot_offset = Vector2(77, 33)

[node name="ColorRect4" type="ColorRect" parent="."]
offset_right = 155.0
offset_bottom = 67.0
scale = Vector2(2.355, 1)
pivot_offset = Vector2(77, 33)

[node name="ColorRect5" type="ColorRect" parent="."]
offset_right = 155.0
offset_bottom = 67.0
scale = Vector2(2.355, 1)
pivot_offset = Vector2(77, 33)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 274.0
offset_top = 90.0
offset_right = 1448.0
offset_bottom = 988.0
scale = Vector2(0.755, 0.755)
texture = ExtResource("4_vn00e")

[node name="BackBlock2" type="ColorRect" parent="."]
offset_left = 116.0
offset_top = 488.0
offset_right = 223.0
offset_bottom = 527.0
rotation = 0.268781
scale = Vector2(4.865, 20.881)
pivot_offset = Vector2(77, 33)
color = Color(0.818015, 0.681753, 0.252187, 1)

[node name="BackBlock1" type="ColorRect" parent="."]
offset_left = 131.0
offset_top = 492.0
offset_right = 238.0
offset_bottom = 531.0
rotation = 0.13439
scale = Vector2(3.92, 16.825)
pivot_offset = Vector2(77, 33)
color = Color(0.907942, 0.907942, 0.907942, 1)

[node name="MoneyDisplayBlock2" type="ColorRect" parent="."]
offset_left = 98.0
offset_top = -11.0
offset_right = 253.0
offset_bottom = 56.0
rotation = 0.10821
scale = Vector2(4.485, 3.531)
pivot_offset = Vector2(77, 33)
color = Color(0.917647, 0.780392, 0.364706, 1)

[node name="MoneyDisplayBlock" type="ColorRect" parent="."]
offset_left = 117.0
offset_top = -18.0
offset_right = 272.0
offset_bottom = 49.0
rotation = 0.13439
scale = Vector2(3.83, 3.015)
pivot_offset = Vector2(77, 33)
color = Color(0.226707, 0.226707, 0.226707, 1)

[node name="NewsBar" type="ColorRect" parent="."]
offset_left = 104.0
offset_top = 593.0
offset_right = 601.0
offset_bottom = 685.0
scale = Vector2(2.355, 1)
pivot_offset = Vector2(77, 33)

[node name="NewsBar2" type="ColorRect" parent="."]
offset_left = -47.0
offset_top = 592.0
offset_right = 108.0
offset_bottom = 659.0
scale = Vector2(2.355, 2.195)
pivot_offset = Vector2(77, 33)
color = Color(0.999996, 0.425794, 0.357092, 1)

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("3_tg0ud")

[node name="PropertyLabel" type="Label" parent="UI"]
offset_left = 21.0
offset_top = 13.0
offset_right = 106.0
offset_bottom = 36.0
rotation = 0.13439
text = "Properties:"

[node name="MoneyLabel" type="Label" parent="UI"]
offset_left = 15.0
offset_top = 39.0
offset_right = 121.0
offset_bottom = 76.0
rotation = 0.13439
scale = Vector2(1.275, 1.275)
theme = SubResource("Theme_4j3m3")
text = "Money:"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_sbr2l")
}

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_left = 27.0
offset_top = 195.0
offset_right = 249.0
offset_bottom = 302.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Profit Phase Button" type="Button" parent="UI"]
offset_left = -800.0
offset_top = 190.0
offset_right = -493.0
offset_bottom = 251.0
rotation = 0.122173
pivot_offset = Vector2(152.595, 21.94)
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_5td2h")
text = "Profit!"

[node name="Stock Market" type="Button" parent="UI"]
offset_left = 20.0
offset_top = 301.0
offset_right = 305.0
offset_bottom = 366.0
rotation = 0.113446
pivot_offset = Vector2(141.645, 29.29)
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_4j3m3")
text = "Stock Market"

[node name="View My Stocks" type="Button" parent="UI"]
offset_left = 53.0
offset_top = 404.0
offset_right = 261.0
offset_bottom = 473.0
rotation = -0.20944
pivot_offset = Vector2(103.26, 32.59)
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_sf6sa")
text = "View My Stocks"

[node name="StockMarket" type="Control" parent="UI"]
visible = false
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="UI/StockMarket"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1110.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ugmh0")

[node name="Exit Stock Market" type="Button" parent="UI/StockMarket"]
layout_mode = 0
offset_left = 1106.0
offset_top = 6.0
offset_right = 1143.0
offset_bottom = 43.0
text = "X"

[node name="GridContainer" type="GridContainer" parent="UI/StockMarket"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.75
anchor_bottom = 16.225
offset_left = 428.0
offset_top = 151.0
offset_right = -408.0
offset_bottom = -213.0
columns = 3

[node name="StockInventory" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="UI/StockInventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1110.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ugmh0")

[node name="Exit Stock Inventory" type="Button" parent="UI/StockInventory"]
layout_mode = 0
offset_left = 1106.0
offset_top = 6.0
offset_right = 1143.0
offset_bottom = 43.0
text = "X"

[node name="GridContainer" type="GridContainer" parent="UI/StockInventory"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.75
anchor_bottom = 16.225
offset_left = 6.0
offset_top = 4.0
offset_right = -49.0001
offset_bottom = -3.0
columns = 10

[node name="Building10" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(1142, 123)
scale = Vector2(0.678711, 0.759692)
texture = ExtResource("6_5ihp5")

[node name="BuyButton" parent="Building10" index="0"]
offset_left = -44.0
offset_top = -95.0
offset_right = 64.0
offset_bottom = 22.0

[node name="Building8" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(947, 103)
scale = Vector2(1.08008, 1.05469)
texture = ExtResource("7_y1731")

[node name="BuyButton" parent="Building8" index="0"]
offset_left = -38.0
offset_top = -96.0
offset_right = 48.0
offset_bottom = 49.0

[node name="Building9" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(1049, 90)
scale = Vector2(1.05078, 1.14814)
texture = ExtResource("8_xhg3w")

[node name="BuyButton" parent="Building9" index="0"]
offset_left = -36.0
offset_top = -70.0
offset_right = 49.0
offset_bottom = 44.0

[node name="Building7" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(1023.5, 208)
scale = Vector2(1.25391, 1.17969)
texture = ExtResource("9_3fyb0")

[node name="BuyButton" parent="Building7" index="0"]
offset_left = -38.0
offset_top = -43.0
offset_right = 66.0
offset_bottom = 21.0

[node name="Building4" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(760, 114)
scale = Vector2(1.25391, 1.17969)
texture = ExtResource("10_ds4b3")

[node name="BuyButton" parent="Building4" index="0"]
offset_left = -38.0
offset_top = -96.0
offset_right = 15.0
offset_bottom = 53.0

[node name="Building5" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(809, 227)
scale = Vector2(1.31453, 1.44734)
texture = ExtResource("11_4a1k0")

[node name="BuyButton" parent="Building5" index="0"]
offset_left = -19.0
offset_top = -94.0
offset_right = 47.0
offset_bottom = 34.0

[node name="Building6" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(946, 251)
scale = Vector2(0.933592, 1.08593)
texture = ExtResource("12_pswn0")

[node name="BuyButton" parent="Building6" index="0"]
offset_left = -79.0
offset_top = -33.0
offset_right = 34.0
offset_bottom = 42.0

[node name="Building1" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(1093, 479)
scale = Vector2(0.980625, 1.1525)
texture = ExtResource("6_1vrkp")

[node name="BuyButton" parent="Building1" index="0"]
offset_left = -45.0
offset_top = -91.0
offset_right = 46.0
offset_bottom = 84.0

[node name="Building2" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(846, 308)
scale = Vector2(1.03281, 1.05625)
texture = ExtResource("7_b10u6")

[node name="BuyButton" parent="Building2" index="0"]
offset_left = -60.0
offset_top = -14.0
offset_right = 18.0
offset_bottom = 55.0

[node name="Building3" parent="." instance=ExtResource("4_5vo6a")]
position = Vector2(782, 270)
scale = Vector2(1.09922, 1.06406)
texture = ExtResource("9_j21lb")

[node name="BuyButton" parent="Building3" index="0"]
offset_left = -96.0
offset_top = -74.0
offset_right = -13.0
offset_bottom = 20.0

[connection signal="pressed" from="UI/Profit Phase Button" to="." method="_on_profit_phase_button_pressed"]
[connection signal="pressed" from="UI/Stock Market" to="UI" method="_on_stock_market_button_pressed"]
[connection signal="pressed" from="UI/View My Stocks" to="UI" method="_on_stock_inventory_button_pressed"]
[connection signal="pressed" from="UI/StockMarket/Exit Stock Market" to="UI" method="_on_stock_market_button_pressed"]
[connection signal="pressed" from="UI/StockInventory/Exit Stock Inventory" to="UI" method="_on_stock_inventory_button_pressed"]

[editable path="Building10"]
[editable path="Building8"]
[editable path="Building9"]
[editable path="Building7"]
[editable path="Building4"]
[editable path="Building5"]
[editable path="Building6"]
[editable path="Building1"]
[editable path="Building2"]
[editable path="Building3"]
